@@ -509,3 +509,13 @@ Garbage collection completed successfully.""")
 
         self.m_get_client.assert_called_once_with('project', mock.ANY)
         self.m_client.get_tag.assert_called_once_with(project_name, tag_id)
+
+    def test_project_tag_delete(self):
+        project_name = 'fake/fake-project'
+        tags = ['refs/tags/9.2', 'refs/tags/9.1']
+        args = 'project tag delete {0} --tag {1}'.format(project_name,
+                                                         ' '.join(tags))
+        self.exec_command(args)
+
+        self.m_get_client.assert_called_once_with('project', mock.ANY)
+        self.m_client.delete_tag.assert_called_once_with(project_name, tags)
