@@ -108,6 +108,7 @@ gerritclient =
     project_parent_show=gerritclient.commands.project:ProjectParentShow
     project_repo-statistics_show=gerritclient.commands.project:ProjectRepoStatisticsShow
     project_show=gerritclient.commands.project:ProjectShow
+    project_tag_delete=gerritclient.commands.project:ProjectTagDelete
     project_tag_list=gerritclient.commands.project:ProjectTagList
     project_tag_show=gerritclient.commands.project:ProjectTagShow
     server_version=gerritclient.commands.server:ServerVersionShow
